--- a/styleguide/source/_patterns/00-atoms/01-global/01-fonts.mustache
+++ b/styleguide/source/_patterns/00-atoms/01-global/01-fonts.mustache
@@ -1,9 +1,9 @@
 <div class="sg-fonts">
-	<p class="font-display">Guardian Sans Display</p>
-	<p class="font-displayitalic">Guardian Sans Display Italic</p>
-	<p>Guardian Sans Regular</p>
-	<p><em>Guardian Sans Italic</em></p>
-	<p><b>Guardian Sans Bold</b></p>
-	<p class="font-bolditalic">Guardian Sans Bold Italic</p>
+	<p class="font-display">Display Font</p>
+	<p class="font-displayitalic">Display Font Italic</p>
+	<p>Font Regular</p>
+	<p><em>Font Italic</em></p>
+	<p><b>Font Bold</b></p>
+	<p class="font-bolditalic">Font Bold Italic</p>
 	<p class="font-fallback">Fallback fonts: Helvetica, Arial, sans-serif</p>
 </div> 
