--- a/styleguide/source/_patterns/00-atoms/07-tables/00-table.mustache
+++ b/styleguide/source/_patterns/00-atoms/07-tables/00-table.mustache
@@ -1,105 +1,124 @@
 <table class="responsive" id="investment-list">
 	<thead>
 		<tr>
-			<th>Enterprise Name</th>
-			<th>Investment Type</th>
-			<th>Vintage Year</th>
-			<th>Investment Amount</th>
-			<th>Enterprise Scale</th>
-			<th>Financial Tool</th>
-			<th>Tax Status</th>
+			<th>&nbsp;</th>
+			<th>Sun</th>
+			<th>Mon</th>
+			<th>Tues</th>
+			<th>Wed</th>
+			<th>Thu</th>
+			<th>Fri</th>
+			<th>Sat</th>
 		</tr>
 	</thead>
 	<tbody>
 	<tr>
-		<td>Ecologic Brand</td>
-		<td>Direct</td>
-		<td>2012</td>
-		<td>$6,283,205</td>
-		<td>Small/medium</td>
-		<td>Enterprise Capital Grant</td>
-		<td>Non-profit</td>
+		<td>Acupuncture</td>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+		<td><i class="fa fa-circle"></i></td>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
 	</tr>
 	<tr>
-		<td>Paraprofessional Healthcare (PHI)</td>
-		<td>Indirect</td>
-		<td>2011</td>
-		<td>$26,025</td>
-		<td>Large</td>
-		<td>Private Debt</td>
-		<td>For-profit</td>
+		<td>Cardiology</td>
+		<td>&nbsp;</td>
+		<td><i class="fa fa-circle"></i></td>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
 	</tr>
 	<tr>
-		<td>DBL Investors</td>
-		<td>Direct</td>
-		<td>2013</td>
-		<td>$196,693</td>
-		<td>State/local</td>
-		<td>Public Debt</td>
-		<td>Non-profit</td>
+		<td>Internal Medicine</td>
+		<td>&nbsp;</td>
+		<td><i class="fa fa-circle"></i></td>
+		<td><i class="fa fa-circle"></i></td>
+		<td><i class="fa fa-circle"></i></td>
+		<td><i class="fa fa-circle"></i></td>
+		<td><i class="fa fa-circle"></i></td>
+		<td><i class="fa fa-adjust"></i></td>
 	</tr>
 	<tr>
-		<td>Buffalo Niagara Medical Campus</td>
-		<td>Indirect</td>
-		<td>2013</td>
-		<td>$39,395</td>
-		<td>Small/medium</td>
-		<td>Private Equity</td>
-		<td>For-profit</td>
+		<td>Neurology</td>
+		<td colspan="7">Please call for specific dates and times</td>
 	</tr>
 	<tr>
-		<td>The Reinvestment Fund</td>
-		<td>Direct</td>
-		<td>2012</td>
-		<td>$573,702</td>
-		<td>Large</td>
-		<td>Public Equity</td>
-		<td>Non-profit</td>
+		<td>Oncology</td>
+		<td><i class="fa fa-circle"></i></td>
+		<td><i class="fa fa-circle"></i></td>
+		<td><i class="fa fa-circle"></i></td>
+		<td><i class="fa fa-circle"></i></td>
+		<td><i class="fa fa-circle"></i></td>
+		<td><i class="fa fa-circle"></i></td>
+		<td><i class="fa fa-circle"></i></td>
 	</tr>
 	<tr>
-		<td>CoopMetrics</td>
-		<td>Indirect</td>
-		<td>2010</td>
-		<td>$1,602,385</td>
-		<td>State/local</td>
-		<td>Enterprise Capital Grant</td>
-		<td>For-profit</td>
+		<td>Ophthamology</td>
+		<td colspan="7">Please call for specific dates and times</td>
 	</tr>
 	<tr>
-		<td>Housing Partnership Network</td>
-		<td>Direct</td>
-		<td>2009</td>
-		<td>$57,493</td>
-		<td>Small/medium</td>
-		<td>Private Debt</td>
-		<td>Non-profit</td>
+		<td>Radiology</td>
+		<td><i class="fa fa-circle"></i></td>
+		<td><i class="fa fa-circle"></i></td>
+		<td><i class="fa fa-circle"></i></td>
+		<td><i class="fa fa-circle"></i></td>
+		<td><i class="fa fa-circle"></i></td>
+		<td><i class="fa fa-circle"></i></td>
+		<td><i class="fa fa-circle"></i></td>
 	</tr>
 	<tr>
-		<td>SASK</td>
-		<td>Indirect</td>
-		<td>2013</td>
-		<td>$732,589</td>
-		<td>Large</td>
-		<td>Public Debt</td>
-		<td>For-profit</td>
+		<td>CT Scans</td>
+		<td><i class="fa fa-circle"></i></td>
+		<td><i class="fa fa-circle"></i></td>
+		<td><i class="fa fa-circle"></i></td>
+		<td><i class="fa fa-circle"></i></td>
+		<td><i class="fa fa-circle"></i></td>
+		<td><i class="fa fa-circle"></i></td>
+		<td><i class="fa fa-circle"></i></td>
 	</tr>
 	<tr>
-		<td>SJF Ventures</td>
-		<td>Direct</td>
-		<td>2013</td>
-		<td>$27,945</td>
-		<td>State/local</td>
-		<td>Private Equity</td>
-		<td>Non-profit</td>
+		<td>Ultrasounds</td>
+		<td><i class="fa fa-adjust"></i></td>
+		<td><i class="fa fa-circle"></i></td>
+		<td><i class="fa fa-circle"></i></td>
+		<td><i class="fa fa-circle"></i></td>
+		<td><i class="fa fa-circle"></i></td>
+		<td><i class="fa fa-adjust"></i></td>
+		<td>&nbsp;</td>
 	</tr>
 	<tr>
-		<td>Tesla</td>
-		<td>Indirect</td>
-		<td>2012</td>
-		<td>$837,273</td>
-		<td>Small/medium</td>
-		<td>Public Equity</td>
-		<td>For-profit</td>
+		<td>Rehabilitation</td>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+		<td><i class="fa fa-circle"></i></td>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+	</tr>
+	<tr>
+		<td>Surgery</td>
+		<td><i class="fa fa-circle"></i></td>
+		<td><i class="fa fa-circle"></i></td>
+		<td><i class="fa fa-circle"></i></td>
+		<td><i class="fa fa-circle"></i></td>
+		<td><i class="fa fa-circle"></i></td>
+		<td><i class="fa fa-circle"></i></td>
+		<td><i class="fa fa-circle"></i></td>
+	</tr>
+	<tr>
+		<td>Surgical Evaluations</td>
+		<td><i class="fa fa-circle"></i></td>
+		<td><i class="fa fa-circle"></i></td>
+		<td><i class="fa fa-circle"></i></td>
+		<td><i class="fa fa-circle"></i></td>
+		<td><i class="fa fa-circle"></i></td>
+		<td><i class="fa fa-circle"></i></td>
+		<td><i class="fa fa-circle"></i></td>
 	</tr>
 	</tbody>
 </table>
