--- a/styleguide/source/_patterns/01-molecules/05-navigation/01-footer-nav.mustache
+++ b/styleguide/source/_patterns/01-molecules/05-navigation/01-footer-nav.mustache
@@ -1,8 +1,10 @@
 <nav class="nav-footer">
     <ul>
-        <li><a href="{{ url }}">Contact</a></li>
-        <li><a href="{{ url }}">FAQs</a></li>
-        <li><a href="{{ url }}">Privacy Policy</a></li>
+        <li><a href="{{ url }}">Resources</a></li>
         <li><a href="{{ url }}">Terms of Use</a></li>
+        <li><a href="{{ url }}">Privacy Policy</a></li>
+        <li><a href="{{ url }}">Hickory Puppies</a></li>
+        <li><a href="{{ url }}">Hickory Pet Inn</a></li>
+        <li><a href="{{ url }}">Hickory Foundation</a></li>
     </ul>
 </nav>
