--- a/styleguide/source/_patterns/02-organisms/00-global/00-header.mustache
+++ b/styleguide/source/_patterns/02-organisms/00-global/00-header.mustache
@@ -1,13 +1,8 @@
-<!-- Begin .header -->
-<header class="header">
+<header>
 	<div class="header-padding">
-		<h1 class="main-logo"><a href="#">Heron</a></h1>
-		{{> molecules-social-media }}
-		<a href="#menu" class="menu-link" alt="Menu"><i class="fa fa-bars"></i></a>
-		{{> molecules-meta-nav }}
-		<div class="mobile-nav-wrapper">
-			{{> molecules-main-nav }}
-		</div>
+		<h1 class="main-logo"><a href="#">{{title}}</a></h1>
+		{{>molecules-contact-info}}
+		{{>molecules-emergency}}
+		{{> molecules-main-nav }}
 	</div>
 </header>
-<!-- End .header -->
