--- a/styleguide/source/_patterns/02-organisms/00-global/01-footer.mustache
+++ b/styleguide/source/_patterns/02-organisms/00-global/01-footer.mustache
@@ -1,18 +1,10 @@
 <footer>
 	<div class="footer-padding">
-		<div class="footer-logo">
-			{{>atoms-logo-white}}
-			{{>molecules-social-media}}
-		</div>
 		{{>molecules-footer-nav}}
-		<div class="contact-info">
-			<p>Copyright 2014<br>
-			    The F.B. Heron Foundation<br>
-			    100 Broadway, 17th Floor<br>
-			    New York, NY 10005<br>
-			    (212) 404-1800<br>
-			    <a href="mailto:info@heronfdn.org">info@heronfdn.org</a>
-			</p>			
+		<div class="footer-contact">
+			{{>molecules-social-media}}
+			{{>molecules-contact-info}}
 		</div>
 	</div>
+	<p class="backtotop"><a href="#"><i class="fa fa-chevron-up"></i>Back to top</a></p>
 </footer>
