--- a/styleguide/source/css/lib/_variables.scss
+++ b/styleguide/source/css/lib/_variables.scss
@@ -62,7 +62,7 @@ Layout/spacing variables
 ////////////////////////////////////////////////////////////////////////////
 */
 
-$section-spacing: 4em;
+$section-spacing: 2rem;
 $header-tall: 140px;
 $header-short: 70px;
 $form-padding: .75em;
