--- a/styleguide/source/css/patterns/_tables.scss
+++ b/styleguide/source/css/patterns/_tables.scss
@@ -8,28 +8,27 @@ table.responsive {
 	border-collapse: collapse; 
 	margin: 2em 0;
 
-	th {
-		color: $heading-color; 
-		cursor: pointer;
-		@include font-bold;
-		vertical-align: top;
-	}
-
-	tbody {
-		tr {
-			border-bottom: 1px solid $border-color;
-		}
-	}
-
-	td { 
-		padding: 1em 2em 1em 0;
+	td, th { 
+		border: 1px solid $border-color;
+		padding: 1em 2em;
 		line-height: 1.5;
 		vertical-align: top;
 		font-size: ms(-.25);
+		text-align: center;
 
-		&:last-child {
-			padding-right: 0;
+		&:first-child {
+			border-left: none;
+			text-align: left;
 		}
+		&:last-child {
+			border-right: none;
+		}
+	}
+
+	th {
+		border-top: none;
+		color: $heading-color; 
+		@include font-bold;
 	}
 }
 
@@ -94,13 +93,14 @@ This query will take effect for any screen smaller than 1024px
 
 	/* Label for data on specific tables */
 	#investment-list {
-		td:nth-of-type(1):before { content: "Value"; }
-		td:nth-of-type(2):before { content: "Value"; }
-		td:nth-of-type(3):before { content: "Value"; }
-		td:nth-of-type(4):before { content: "Value"; }
-		td:nth-of-type(5):before { content: "Value"; }
-		td:nth-of-type(6):before { content: "Value"; }
-		td:nth-of-type(7):before { content: "Value"; }
+		td:nth-of-type(1):before { content: ""; }
+		td:nth-of-type(2):before { content: "Sun"; }
+		td:nth-of-type(3):before { content: "Mon"; }
+		td:nth-of-type(4):before { content: "Tues"; }
+		td:nth-of-type(5):before { content: "Wed"; }
+		td:nth-of-type(6):before { content: "Thu"; }
+		td:nth-of-type(7):before { content: "Fri"; }
+		td:nth-of-type(8):before { content: "Sat"; }
 	}
 }
 
