--- a/styleguide/source/_patterns/00-atoms/04-images/00-logo.mustache
+++ b/styleguide/source/_patterns/00-atoms/04-images/00-logo.mustache
@@ -1,1 +1,1 @@
-<a href="{{ url }}"><img src="../../img/logo.svg" class="logo" alt="Logo Alt Text" /></a>
+<a href="{{ url }}"><img src="../../img/logo-temp.png" class="logo" alt="Logo Alt Text" /></a>
