--- a/styleguide/source/_patterns/01-molecules/05-navigation/06-social-media.mustache
+++ b/styleguide/source/_patterns/01-molecules/05-navigation/06-social-media.mustache
@@ -1,5 +1,5 @@
 <ul class="social-media">
     <li><a href="#"><i class="fa fa-facebook"></i></a></li>
     <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+    <li><a href="#"><i class="fa fa-youtube"></i></a></li>
 </ul>
