--- a/styleguide/source/_patterns/02-organisms/01-text/00-body-text.mustache
+++ b/styleguide/source/_patterns/02-organisms/01-text/00-body-text.mustache
@@ -1,11 +1,8 @@
-{{#listItems.two}}
-	{{>atoms-paragraph}}
-{{/listItems.two}}
 <h2>{{ headline.short }}</h2>
 {{#listItems.two}}
 	{{>atoms-paragraph}}
 {{/listItems.two}}
-{{>molecules-blockquote-with-citation}}
-{{#listItems.three}}
+{{>atoms-blockquote}}
+{{#listItems.one}}
 	{{>atoms-paragraph}}
-{{/listItems.three}}
+{{/listItems.one}}
