--- a/styleguide/source/css/layout/_header.scss
+++ b/styleguide/source/css/layout/_header.scss
@@ -1,26 +1,46 @@
 header {
 	border-bottom: 1px solid black;
+	text-align: center;
+
+	@include breakpoint($m) {
+		.contact-info {
+			float: left;
+			text-align: left;
+		}
+
+		.emergency {
+			float: right;
+		}
+	}
+
+	p {
+		margin-bottom: 0;
+	}
 }
 
 .header-padding {
 	@include container;
+	padding-top: 1rem;
 	overflow: visible; /* lets dropdown nav show */
 }
 
 .main-logo {
+	margin-bottom: 20px;
+	display: inline-block;
+
 	a {
-		// background: url("../img/logo.svg") 0 0 no-repeat; SVG if possible
-		background: url("../img/logo.png") 0 0 no-repeat;
+		// background: url("../img/logo-temp.svg") 0 0 no-repeat; SVG if possible
+		background: url("../img/logo-temp.png") center no-repeat;
 		position: relative;
 		display: block;
 		text-indent: -9999px; 
 		text-decoration: none;
-		width: 525px;
-		height: 153px;
-		background-size: 525px 153px;
+		width: 221px;
+		height: 82px;
+		background-size: 221px 82px;
 	}
 }
 
 .ie8 header .main-logo a {
-	background: url("../img/logo.png") 0 0 no-repeat;
+	background: url("../img/logo-temp.png") 0 0 no-repeat;
 }
