--- a/styleguide/source/css/styleguide-specific.scss
+++ b/styleguide/source/css/styleguide-specific.scss
@@ -7,7 +7,7 @@
  * It's also helpful for overriding context-specific styles like fixed or absolutely positioned elements
  * These styles will not be your production CSS.
  */
-@import "sass/screen";
+@import "style";
  
 
 /* Style Guide Interface Colors */ 
