more molecule level patterns
Signed-off-by: Matt Lee <matthewleedesign@gmail.com>

--- a/styleguide/source/css/patterns/_typography.scss
+++ b/styleguide/source/css/patterns/_typography.scss
@@ -95,7 +95,25 @@ blockquote {
   }
 }
 
+.thank-you-quote {
+  margin: 0;
+  padding: 0;
+  border: none;
 
+  p {
+    &:before {
+      content: "“";
+    }
+    &:after {
+      content: "”";
+    }
+  }
+
+  cite {
+    display: block;
+    text-align: right;
+  }
+}
 
 
 /* 
