--- a/styleguide/source/css/style.scss
+++ b/styleguide/source/css/style.scss
@@ -35,6 +35,7 @@
 @import "layout/global";
 @import "layout/header";
 @import "layout/footer";
+@import "layout/footer-features";
 
 /* individual components, usually from Bower*/
 // @import "plugins/owl-carousel-base";
